# torchbygnd

./: .gitconfig  .gitignore  README.md  data.ipynb  environment.sh  environment.yml  pyproject.toml  requirements.txt  run.py  test.ipynb  test.py
notebooks/: demo.ipynb  main.ipynb  test.ipynb
notebooks/checkpoints/: epoch=0-step=100.ckpt
utils/: base.py  preprocess.py
