[project]
name = "torchbygnd"
description = "An effort to explore and implement ML models, with a goal of creating materials under \"PyTorch from the Ground Up\""
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.3.0",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "executing==2.2.0",
    "filelock==3.13.1",
    "flatbuffers==25.2.10",
    "fonttools==4.58.1",
    "fsspec==2024.6.1",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.71.0",
    "h5py==3.13.0",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "joblib==1.5.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "keras-nightly==3.10.0.dev2025053003",
    "kiwisolver==1.4.8",
    "libclang==18.1.1",
    "markdown==3.8",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.1",
    "mpmath==1.3.0",
    "namex==0.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "numpy==2.1.2",
    "nvidia-cublas-cu11==11.11.3.6",
    "nvidia-cuda-cupti-cu11==11.8.87",
    "nvidia-cuda-nvrtc-cu11==11.8.89",
    "nvidia-cuda-runtime-cu11==11.8.89",
    "nvidia-cudnn-cu11==9.1.0.70",
    "nvidia-cufft-cu11==10.9.0.58",
    "nvidia-curand-cu11==10.3.0.86",
    "nvidia-cusolver-cu11==11.4.1.48",
    "nvidia-cusparse-cu11==11.7.5.86",
    "nvidia-nccl-cu11==2.21.5",
    "nvidia-nvtx-cu11==11.8.86",
    "opt-einsum==3.4.0",
    "optree==0.16.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "platformdirs==4.3.8",
    "polars==1.30.0",
    "prompt-toolkit==3.0.51",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==26.4.0",
    "requests==2.32.3",
    "rich==14.0.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "setuptools==70.2.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "tb-nightly==2.19.0a20250218",
    "tensorboard-data-server==0.7.2",
    "termcolor==3.1.0",
    "tf-nightly==2.20.0.dev20250526",
    "threadpoolctl==3.6.0",
    "torch==2.7.0+cu118",
    "torchaudio==2.7.0+cu118",
    "torchvision==0.22.0+cu118",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triton==3.3.0",
    "typing-extensions==4.12.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.2",
]
